
[metadata]
# change 'pkg' to package name
name = pkg
version = 0.0.1
description = <package description>
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD 3-Clause License

[options]
package_dir=
    =src
packages=find:
# required dependencies, see https://setuptools.pypa.io/en/latest/userguide/quickstart.html#dependency-management
install_requires =
    # flask
    # matlabengine==24.1.2

[options.packages.find]
where=src
install_requires =
    importlib; python_version >= "3.0"
